# wiki_scraper

./: Makefile  no_linting.grep  pyproject.toml
wikiscraper/data/: Barbie.json  Barbie_contributors.json  Lego Star Wars.json  Lego Star Wars_contributors.json  Lego.json  Lego_contributors.json
wikiscraper/data_access/: data_mappings.py  data_reader.py  data_writer.py
wikiscraper/scraper/: data_mappings.py  wiki_api.py
