[tool.poetry]
name = "wikiscraper"
version = "0.1.0"
description = ""
authors = ["Moditha Hewasinghage <moditha88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
mypy = "^1.7.1"
ruff = "^0.1.7"
pandas = "^2.1.4"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

